--- a/Karel_Diederik_Schönfeld_Wichers.mw
+++ b/Karel_Diederik_Schönfeld_Wichers.mw
@@ -4,20 +4,20 @@
 Döär dat hee sik afsünderden in et wold rund Ryssen, is der verholdingswys weinig oaver üm bekend.
 
 ==Leyven==
-Schönfeld-Wichers har in [[Amsterdam]] eleyrd vöär advokåt (Meyster in de Rechten), en vöär notåris in [[n Heeg|Den Haag]]. Et verhaal wil dat hee up den dag van syne officielle anstelling köys vöär een vry leyven, under et motto "leyver vryheid as geld". Hee tröyk sik terügge in 'n bos, wår as hee selv ne boomhütte bowd har. Dat gebröyk hee as syn woanhuus. Syn bröyr Herman boweden later ouk een hüüsken in etselvde bos. Do as Herman nå [[Grunnen (stad)|Grönningen]] ümtröyk, verwesselden Karel syne hütte vöär den van Herman.
+Schönfeld-Wichers har in [[Amsterdam]] eleyrd vöär advokåt (Meyster in de Rechten), en vöär notåris in [[n Heeg|Den Haag]]. Et verhaal wil dat hee up den dag van syne officielle anstelling köys vöär een vry leaven, under et motto "lever vryheid as geld". Hee tröäk sik terügge in 'n bos, wår as hee selv ne boomhütte bouwd har. Dat gebröäk hee as syn woanhuus. Syn bröder Herman bouweden later ouk een hüüsken in etselvde bos. Do as Herman nå [[Grunnen (stad)|Grönningen]] verhüseden, verwesselden Karel syne hütte vöär den van Herman.
 
-"Menear Karel", so as ryssenders üm nöymeden, höyld van de anweysigheid van anderen, mär nit üm selv in de belangstelling te stån. Hee organiseyreden regelmåtig musikoavenden, wår hee dan selv med synen [[trekzak|trekkebüdel]] verskes medspöllen deyd en underwyl de domålige jögend uuthöyreden oaver de ryssender språke.
+"Menear Karel", so as ryssenders üm nöymeden, höld van de anweasigheid van anderen, mär nit üm selv in de belangstelling te stån. Hee organiseerden regelmåtig musikåvenden, wår hee dan selv med synen [[trekzak|trekkebüdel]] verskes medspöllen deyd en underwyl de domålige jögend uuthöyreden oaver de ryssender språke.
 
-Van ne olde [[Renault]]-vrachtwage makeden hee de allereyrste ''camper'', den as hee de ''Kueklkoare'' (köykelkåre) döypeden. Dårmed tröyk hee reygelmåtig med künnigheid (meysttyds junge lüde) döär [[Europa (continent)|Europa]] (u.a. med [[Harm oet Riessen|Harm uut Ryssen]]). Geld verdeyneden se dan döär seisoonswark te doon, so as byvöärbeyld druven plükken by de wynburen in [[Fraankriek|Frankryk]]. Disse reisen beskreyv hee in synen bündel ''Raejsbreewe oet de Kueklkoare'' (Reisbreyve uut de Köykelkåre). Ne andere reise voreden üm in [[1955]] når [[Sicilië|Sicilye]], wår oaver hee in [[1985]] et book ''Noar 't Vuerspiejige Aejlaand'' (Når et Vüürspyige Eiland) skreyv.
+Van ne olde [[Renault]]-vrachtwage makeden hee de allereyrste ''camper'', den as hee de ''Kueklkoare'' (köykelkåre) döypeden. Dårmed tröyk hee reygelmåtig med künnigheid (meysttyds junge lüde) döär [[Europa (continent)|Europa]] (u.a. med [[Harm oet Riessen|Harm uut Ryssen]]). Geld verdeenden se dan döär seisoonswark te doon, so as byvöärbeyld druven plükken by de wynburen in [[Fraankriek|Frankryk]]. Disse reisen beskreyv hee in synen bündel ''Raejsbreewe oet de Kueklkoare'' (Reisbreyve uut de Köykelkåre). Ne andere reise voreden üm in [[1955]] når [[Sicilië|Sicilie]], wåroaver hee in [[1985]] et book ''Noar 't Vuerspiejige Aejlaand'' (Når et Vüürspyige Eiland) skreyv.
 
 De Köykelkåre is up ekocht döär een stel ryssenders dee as et ding uplappen wilt. Se hebbet der ouk öäre [[slephutte|sleaphüttenvereynige]] når eneumd.<ref>F.G.W. Löwik (2003), ''De Twentse Beweging : strijd voor modersproake en eigenheid.'' Grönningn: Rieksuniversiteit Grönningn. [http://dissertations.ub.rug.nl/FILES/faculties/arts/2003/f.g.h.loewik/wieiswie.pdf 'Wie is wie?'] (pdf)</ref>
 
 ==Bekendheid==
-De meyste bekendheid kreyg Schönfeld-Wichers med syn wöördebook van et ryssenske dialekt van vöär 1959, wårvöär hee syne eygene skryvwyse uutdachten. Disse skryvwyse was slim fonetisk, up [[Nederlaands|neaderlandsk]]en grundslag. Samenstellede wöörde en "Neaderlandske" wöörde löyt hee vort. Ouk was hee 'n eyrsten vöärsitter van de lokale heymkündevereynige. Et wöördeböykske was bedoold as 'instap vöär et ryssensk'.
+De meyste bekendheid kreyg Schönfeld-Wichers med syn wöördebook van et ryssenske dialekt van vöär 1959, wårvöär hee syne eygene skryvwyse uutdachten. Disse skryvwyse was slim fonetisk, up [[Nederlaands|neaderlandsk]]en grundslag. Samenstellede wöörde en "Neaderlandske" wöörde löyt hee vort. Ouk was hee 'n eyrsten vöärsitter van de lokale heymkündevereynige. Et wöördeböken was bedoold as 'instap vöär et ryssensk'.
 
-Schönfeld-Wichers was een unmündig sekuur man. Nå völle upmarkingen en anwysingen van andere ryssenders skreyv hee in 1970 noch een byvoogsel by et wöördeböykske. Dat löyt hee uutgeaven in ''De Driemaandelijkse Bladen'' van et [[Nedersaksisch Instituut]] van de ryksuniversiteit Grönningen. In dat byvoogsel stünden noch völle mear wöörde en uutdrükkingen. Et böykske is al jåren uutverkocht, mär wörd in 1996 in kleine antallen vannys edrükked üm te vyren dat de Stichting Oudheidkamer Riessen 45 jår bestünd. Et byvoogsel wör hyrby nit up enöämen, mär beide sint nu online as [[pdf]] te krygen.
+Schönfeld-Wichers was een unmündig sekuur man. Nå völle upmarkingen en anwysingen van andere ryssenders skreyv hee in 1970 noch een byvoogsel by et wöördeböken. Dat löyt hee uutgeaven in ''De Driemaandelijkse Bladen'' van et [[Nedersaksisch Instituut]] van de ryksuniversiteit Grönningen. In dat byvoogsel stünden noch völle mear wöörde en uutdrükkingen. Et böken is al jåren uutverkocht, mär wörd in 1996 in kleine antallen vannys edrükked üm te vyren dat de Stichting Oudheidkamer Riessen 45 jår bestünd. Et byvoogsel wör hyrby nit up enöämen, mär beide sint nu online as [[pdf]] te krygen.
 
-In [[1979]] köm hee med et uutgebreide ''Woordenboek Nederlands Twents'' wårin as hee syn nye byvoogsel van 1970 selv in verwarket had. Nöäst oaversettingen van wöörde gavven hee ouk uutgebreide kulturele beskryvingen. De nit-ryssenske Twentske wöörde "verryssensken" hee, ümdat dat volgens üm et oorsprunkelike twentsk was en de andere soorten ne "verkörte uutvoring". Dåruut bleyk syne starke gevöylsband med Ryssen en et ryssensk. Et geavt een good beyld van (et) Ryssen(sk) en Twente in de vroge [[20e eeuw|20ste ewe]], mär en akademisk bookwark kan et dårdöär nit enöymd worden.
+In [[1979]] köm hee med et uutgebreide ''Woordenboek Nederlands Twents'' wårin as hee syn nye byvoogsel van 1970 selv in verwarked har. Nöäst oaversettingen van wöörde gavven hee ouk uutgebreide kulturele beskryvingen. De nit-ryssenske twentske wöörde "verryssensken" hee, ümdat dat volgens üm et oorsprunkelike twentsk was en de andere soorten ne "verkörte uutvoring". Dåruut bleak syne starke gevöölsband med Ryssen en et ryssensk. Et geavt een good beyld van (et) Ryssen(sk) en Twente in de vroge [[20e eeuw|20ste eywe]], mär en akademisk bookwark kan et dårdöär nit enöömd worden.
 
 <blockquote>"''...Maar bij de bovenbedoelde verkorting gaat het om iets heel anders, namelijk het weglaten van "e"-s die juist wél betekenis hebben in het woord. Het zijn, grammatikaal geordend, de volgende:''</blockquote>
 
@@ -27,18 +27,24 @@ In [[1979]] köm hee med et uutgebreide ''Woordenboek Nederlands Twents'' wårin
 <blockquote>''[...]''"<ref>Schönfeld Wichers, Mr. K.D. Woordenboek Nederlands Twents. Hengelo: Uitgeverij Broekhuis. p.13</ref></blockquote>Wat ryssenders proberet al jåren een standbeyld vöär Schönfeld-Wichers in Ryssen te krygen, mär dår wil de gemeente noch nit an. As klein protest steyt dårümme syne foto in de nye uutgave van et ryssenske wöördeböken.
 
 ==Skryvwyse==
-Karel bedachten syne eygene skryvwyse, ümdat den vöär et (ryssensk) twentsk noch neet bestünd. Hee hantereden as basis et hollandsk vöär de klank-letterverbindingen, mär wydters was de skryvwyse slim up klank erichted. Toch was Schönfeld-Wichers nit künnig med et [[Internasjonaal Klaankenskrift|Internationale Klankenskrivt]]. Hee höld der reakening med dat syne leysers meysttyds verholdingswys mär kört når skole güngen en enkel een beaten hollandsk hadden leyren leysen en skryven. Dår probereden hee by an te sluten. In syn ''Woordenboek Rijssens Dialect'' deyd hee in et ''Voorwoord'' by yderen afsünderliken klank ne uutleg.<blockquote>''Bij de spelling heb ik mij een tweeledig doel gesteld, namelijk de woorden goed weergeven, zoals ze werkelijk uitgesproken worden en een eenvoudig geheel van regels te volgen, met vermijding van tekens, die niet beslist nodig waren. (...)''</blockquote><blockquote>''Een in het Rijssens veel voorkomende klank is die van het Engelse "but" of het Duitse "Köpfe" als ze kort, en van het Franse "soeur" of het Engelse "world" als ze lang is. Door dialectschrijvers wordt voor de korte meestal het Duitse teken "ö" gebruikt, Maar verschillende overwegingen hebben mij er toe gebracht dat niet te doen. Deze klank is namelijk geen variatie van de "o", maar van de "u"; tussen haar en "u" van bv. "put" bestaat een soortgelijke betrekking als tussen de "o" van "los" en die van "dof". Daarom gaf ik de voorkeur aan het teken: "ù". De lange klank kan dan volgens de algemene regel (achtervoeging van een "e") weergegeven worden door "ùe", terwijl men bij het Duitse teken dan zou moeten komen tot "öe", dat onduidelijk is en aan de "oe" of aan "ooee" doet denken. Ook is bij het schrijven het zetten van een ' eenvoudiger dan van ".''</blockquote>Koarel skreyv as vöärbeyld ''wöörde'' as ''wùere''. Üm leysers te låten wennen an syne styl, skreyv hee achterin et wöördebook een kört verhaal, vulledig in dee spelling. {{Dia|Paragraaf 1:<br>''Teegn de tied dat uern keal dr zoowat wier kon wean oet t venne, lear Gediene zik in n blootn hemdrok, n boontn dook umme en t kaapjen op, ouwr de oondrduure. Dat zo'j ook vuur de wille doon op zonnen moojn zomroawnd; dan is dr leawndigaejd genog achtr de groote eekne bueme langs de Hoar. Ze keek de kaante van n Lechnboarg op, mer nog ginnen keal. wal kùm doar Mans met peard en huejwaage tusken de bueme duur en hùel skuuns op t hoes an dat an dezelde kaante lear as t ùere.'' (...)}}
+Karel bedachten syne eygene skryvwyse, üm dat den vöär et (ryssensk) twentsk noch neet bestünd. Hee hantereden as basis et hollandsk vöär de klank-letterverbindingen, mär wydters was de skryvwyse slim up klank erichted. Toch was Schönfeld-Wichers nit künnig med et [[Internasjonaal Klaankenskrift|Internationale Klankenskrivt]]. Hee höld der reakening med dat syne leysers meysttyds verholdingswys mär kört når skole güngen en enkel een beaten hollandsk harren leyren leysen en skryven. Dår probereden hee by an te sluten. In syn ''Woordenboek Rijssens Dialect'' deyd hee in et ''Voorwoord'' by yderen afsünderliken klank ne uutleg.<blockquote>''Bij de spelling heb ik mij een tweeledig doel gesteld, namelijk de woorden goed weergeven, zoals ze werkelijk uitgesproken worden en een eenvoudig geheel van regels te volgen, met vermijding van tekens, die niet beslist nodig waren. (...)''
+
+''Een in het Rijssens veel voorkomende klank is die van het Engelse "but" of het Duitse "Köpfe" als ze kort, en van het Franse "soeur" of het Engelse "world" als ze lang is. Door dialectschrijvers wordt voor de korte meestal het Duitse teken "ö" gebruikt, Maar verschillende overwegingen hebben mij er toe gebracht dat niet te doen. Deze klank is namelijk geen variatie van de "o", maar van de "u"; tussen haar en "u" van bv. "put" bestaat een soortgelijke betrekking als tussen de "o" van "los" en die van "dof". Daarom gaf ik de voorkeur aan het teken: "ù". De lange klank kan dan volgens de algemene regel (achtervoeging van een "e") weergegeven worden door "ùe", terwijl men bij het Duitse teken dan zou moeten komen tot "öe", dat onduidelijk is en aan de "oe" of aan "ooee" doet denken. Ook is bij het schrijven het zetten van een ' eenvoudiger dan van ".''</blockquote>Koarel skreav as vöärbeyld ''wöörde'' as ''wùere''. Üm leysers te låten wennen an syne styl, skreav hee achterin et wöördebook een kört verhaal, vulledig in dee spelling. {{Dia|Paragraaf 1:<br>''Teegn de tied dat uern keal dr zoowat wier kon wean oet t venne, lear Gediene zik in n blootn hemdrok, n boontn dook umme en t kaapjen op, ouwr de oondrduure. Dat zo'j ook vuur de wille doon op zonnen moojn zomroawnd; dan is dr leawndigaejd genog achtr de groote eekne bueme langs de Hoar. Ze keek de kaante van n Lechnboarg op, mer nog ginnen keal. wal kùm doar Mans met peard en huejwaage tusken de bueme duur en hùel skuuns op t hoes an dat an dezelde kaante lear as t ùere.'' (...)}}
+
 
 Een ander kenmark is et radikaal vortlåten van den stummen -e, selvs vöär -r en -l. In boavenstånd stükken ståt byvöärbeyld de wöörde ''oondrduure'' (underdöäre), zomroawnd (sommeroavend) en ''achtr'' (achter).
 
 === Uutwarking ===
 [[Ofbeelding:De Weawer.jpg|thumb|232x232px|''De Weawr''. Vöärbeyld van wandversyrige med Karel syne skryvwyse.|alt=]]
 
-Schönfeld-Wichers was den eyrsten den as syne ryssenske skryverye officieel uutgavven. En ümdat hee een heyl antal junge gäste begeleiden dee as later in Ryssen en vöär de språke invloodryke lüde wörden, so as [[Harm Agteresch]] en [[Gerrit Kraa]], kreyg syne skryvwyse al gau voot an de grund. Der was ouk nit wat anders. Syne skryvwyse wörd töt up den dag van vandage noch ebruked in officiele naams so as de [[slephutte|sleaphüttenvereynige]] ''De Kueklkoare,'' postseygelversamelgruup ''<nowiki/>'n Poszeagl,'' de meyste [[Tweantse skeeldnaamns|skealdnaams]] en geavelversyringen.
+Schönfeld-Wichers was den eyrsten den as syne ryssenske skryverye officieel uutgavven. En ümdat hee een heyl antal junge gäste begeleiden dee as later in Ryssen en vöär de språke invloodryke lüde wörden, so as [[Harm Agteresch]] en [[Gerrit Kraa]], kreyg syne skryvwyse al gau voot an de grund. Der was ouk nit wat anders. Syne skryvwyse wördt töt up den dag van vandage noch ebruked in officiele naams so as de [[slephutte|sleaphüttenvereynige]] ''De Kueklkoare,'' postseygelversamelgruup ''<nowiki/>'n Poszeagl,'' de meyste [[Tweantse skeeldnaamns|skealdnaams]] en geavelversyringen.
 
-==Mooy üm te weaten==
+''<nowiki/>''
 
-*Alle jåren in [[meert]] düt de gemeynteråd van [[Riessen-Hoolten|Ryssen-Holten]] vergaderen in et neadersassisk. Et rådslid wat et "mööyste" plat düt, krigt den ''Karel van 'n Notåris Wisselbeker''.
+==Mooi üm te weaten==
+
+*Alle jåren in [[meert|maert]] düt de gemeynteråd van [[Riessen-Hoolten|Ryssen-Holten]] vergaderen in et neadersassisk. Et rådslid wat et "mööyste" plat düt, krigt den ''Karel van 'n Notåris Wesselbeker''.
+*In 2019 wör syn wöördebook neaderlandsk-twentsk van 1979 vannys uutgeaven.
 
 ==Skryvwark==
 
