*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -115,6 +115,13 @@ De afwysing van ''The Third Policeman'' (Den Darden Polityman) döär uutgeavers
 
 In ''The Dalkey Archive'' sit een karakter den as nen berouwvullen, ölderen en skynbår uneavenwichtigen [[James Joyce]] teagenkümt. Den düt in et book syn eygen wark af as 'ik hebbe weinig uut egeaven' en likt nit te weaten dat hee ''[[Finnegans Wake]]'' skreaven en uut egeaven hevt. Joyce warket as nen hülpbarman of ''curator'' - ne humoristiske verwysing når Joyce syne vermode preesterlike ambitys. Underwyl probeert den weatenskapper De Selby alle lucht uut de wearld te sugen, terwyl Sergeant Pluck van Sergeant Fottrell höyret oaver de mollekul-teory. ''The Dalkey Archive'' wör ümmeskreaven vöär teater in september 1965 döär [[Hugh Leonard]], under den titel ''The Saints Go Cycling In''.<ref>[http://www.irishplayography.com/play.aspx?playid=31428 Playography Ireland. The Saints Go Cycling In. Irish Theatre Institute.] Bekeaken up 21 april 2013.</ref>
 
+=== Andere warken ===
+Andere böke van O'Nolan sint under meyr ''[[An Béal bocht]]'', oaversat van [[iers|yrsk]] når [[engels]]k as ''The Poor Mouth'' (Den årmen mund). Et was ne parody up Tomás Ó Criomhthain's autobiografiske wark ''An t-Oileánach'' (den Eilander). Et was ne fiktive autobiografy den as hee as syn 'mis-terwark' emeynd had.
+
+In et teater har O'Nolan nit vöäle sukces. ''Faustus Kelly'', een stük oaver nen lokalen wetholder den as syne sele an den düvel verkocht vöär ne seatel in de Dáil (et yrske parlement), draeyden mär 11 mål in [[1943]].<ref>[https://www.lrb.co.uk/v35/n20/jonathan-coe/clutching-at-railings Coe, Jonathan. "Clutching at Railings". [[London Review of Books]], vol 35, nr 20. 24 oktober 2013. p 21–22.] Bekeaken up 30 september 2011}}</ref> Een tweyde stük, ''Rhapsody in Stephen's Green'', ouk wal ''The Insect Play'' enöömd, was ne bewarking van de Čapek-bröders öär lyknamige toneelstük, wårin menskachtige insekten de samenleaving up de hakke neamt. Ouk den köäm uut in 1943, mär wör al gau stopped, möägelik ümdat et verskillende grupen vöär de skeanen stoaten, so as Katholiken, ulsterske protestanten, yrske ambtenåren, inwoaners van Cork, en de [[Fianna Fáil]]-partye.<ref>[https://www.lilliputpress.ie/product/rhapsody-in-stephens-greenthe-insect-play [[The Lilliput Press]]. "Rhapsody in Stephens Green & The Insect Play."] Bekeaken up 13 February 2018</ref> Et stükke wör lange tyd as verlöären beskouwd, mär döyk wear up in [[1994]], in de archiven van [[Northwestern University]].<ref>[https://www.theguardian.com/books/1994/nov/17/news Lennon, Peter. "From the dung heap of history". [[The Guardian]], 17 November 1994]. Bekeaken up 13 february 2018</ref>
+
+In [[1956]] was O'Nolan med-programmamaker vöär [[RTÉ]], de yrske nationale sender. Dårvöär warkeden hee med an ''3 Radio Ballets''; ne dansuutvoring in drey deylen, bedacht en bedoold vöär uutvoring up de radio.
+
 ==Referensys==
 <references/>
 
