*Empty MediaWiki Message*

--- a/Lotte_van_der_Zee.mw
+++ b/Lotte_van_der_Zee.mw
@@ -1,7 +1,7 @@
 [[File:Lotte van der zee-1551957654.jpg|thumb|150px|Lotte van der Zee]]
-'''Lotte van der Zee''' ([[21 febrewaori|21 february]] [[1999]], [[Eanske|Enske]] - [[6 meert|6 maart]] [[2019]], [[München]]) was het mooiste tener-wichy van [[Overiessel|Oaveryssel]], [[Neerlaand|Neaderland]] en de wearld (2016-'17). Sy wördden in mei 2016 töt ''[[Miss Beauty of Overijssel]]'' (juniorkategory) eköäsen, in september 2016 kreeg ze de titel ''[[Miss Teen of the Netherlands]]'' en in augustus 2017 had ze de titel ''[[Miss Teenager Universe]]'' te pakken. By de lätsten had he et teagen 33 missen uut andere landen up-enömmen. Sy was de eerste europääske wat disse prys når [[Europa]] en Neaderland haalden.
+'''Lotte van der Zee''' ([[21 febrewaori|21 february]] [[1999]], [[Eanske|Enske]] - [[6 meert|6 maart]] [[2019]], [[München]]) was et mooiste tener-wichyn van [[Overiessel|Oaveryssel]], [[Neerlaand|Neaderland]] en de wearld (2016-'17). Sy wördden in mei 2016 töt ''[[Miss Beauty of Overijssel]]'' (juniorkategory) eköäsen, in september 2016 kreyg he de titel ''[[Miss Teen of the Netherlands]]'' en in augustus 2017 had he de titel ''[[Miss Teenager Universe]]'' te pakken. By de lätsten had hee et teagen 33 missen üüt andere landen up-enömmen. Sy was de eyrste europääske wat disse prys når [[Europa]] en Neaderland haalden.
 
-February 2019 kreeg Van der Zee op wintersport een härtstilstand. See wör twey weaken lange kunstmåtig in [[koma]] hölden, wårnå he woonsdagåvend 6 maert uut de tyd köäm. Up såtyrdag 16 maert künden mensken koamen kondeleyren in de Groute Karke te Enske. Dår kwamen düsenden mensken up of. Sy is in besloaten kringe ekremeyred.
+February 2019 kreeg Van der Zee up wintersport een härtstilstand. See wör twey weaken lange kunstmåtig in [[koma]] hölden, wårnå he woonsdagåvend 6 maert üüt de tyd köäm. Up såturdag 16 maert künden mensken koamen kondeleyren in de Groute Karke te Enske. Dår kwamen düsenden mensken up of. Sy is in besloaten kringe ekremeyred.
 
 {{Dialekt|sdz}}
 
