Wiezigingen deur [[Special:Contributions/87.214.69.148|87.214.69.148]] hersteld tot de versie nao de leste wieziging deur [[User:Wwikix|Wwikix]]

--- a/Betuwe.mw
+++ b/Betuwe.mw
@@ -1,5 +1,5 @@
 {{Umraand|Betuwe-kaort.GIF}}
-De '''Betuwe''' of '''Rivierenland''' is n [[Nederlaand|Nederlandse]] landstreek in de [[pervincie|provincie]] [[Gelderlaand|Gelderland]], elegen tussen de rivieren de [[Waol]] in t zujen en de [[Nederrien]] en de [[Lek]] in t noorden.
+De '''Betuwe''' of '''Rivierenland''' is n [[Nederlaand|Nederlandse]] landstreek in de [[pervincie|provinsie]] [[Gelderlaand|Gelderland]], elegen tussen de rivieren de [[Waol]] in t zujen en de [[Nederrien]] en de [[Lek]] in t noorden.
 
 De Betuwe bestaot uut de zuudwestelik elegen [[Tielerweerd]], de noordwestelike [[Neder-Betuwe]] en de oostelike [[Over-Betuwe]].
 
