--- a/Sangklokke.mw
+++ b/Sangklokke.mw
@@ -1,4 +1,22 @@
-De '''sangklokke''' is et achter mekare an singen van sangvöägel. So wal des morgens as des åvends höär y sangvöägel eyne vöär eyne up een bepålden tyd singen. Vöäral up et vöärjår is dat te höären, as se ear gebeed ofskarmen willet.
+De '''sangklokke''' is et achter mekare an singen van sangvöägel. Up de morgen höär y sangvöägel eyne vöär eyne up een bepålden tyd singen. Vöäral up et vöärjår is dat te höären, as se ear gebeed ofskarmen willet.
 
 ===Neaderland===
 Up de morgen kün y de volgende ryge an vöägel höären:
+
+Vanof twey ure vöär dat de sünne upkümt:
+
+* Nachtegale, Boumleywerke, Paapy, Veldleywerke, Gekraagde roudstaert, Swarte roudstaert, Kwartel, Groute lyster, Geyteling, Fazante, Roudbörst, Sanglyster en Kukuk
+
+Eyne ure vöär dat de sünne upkümt:
+
+* Heagenmüsse, Gealgors, Winterköäninkyn, Boumpeper, Koalmeyse, Staertmeysse, Tüünflüter, Vinke, Tjiftjaf, Boumkruper en Ysvogel
+
+Een halv ure vöär dat de sünne upkümt:
+
+* Pimpelmeyse, Matkop, Glanskop, Swartkop, Grauwe vlegenvanger, Holtduve en Gröne spechte
+
+Rund en nå dat de sünne upkümt:
+
+Knöy, Språne, Vlaamske gaaie, Groute bunte spechte, Pütter, Europääske kanary, Gröönling en Flüter
+
+{{Dialekt|sdz}}
