*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -3,7 +3,7 @@
 | skryversnaam   = Myles na gCopaleen, Flann O'Brien
 | geboren        = [[ 5 oktober]] [[1911]]
 | sturven        = [[1 april]] [[1966]]
-| genre          = [[Postmodernisme]], [[satire]], [[
+| genre          = [[Postmodernisme]], [[satire]], [[parody]]
 | spraoke        = [[engels]]k, [[iers|yrsk]], [[duuts|düütsk]], [[latien|latyn]]
 | laand          = [[Ierlaand|Yrland]]
 | webstee        = 
