--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -1,13 +1,15 @@
-{{Infobox zanger
-| naam           = Brian O'Nolan
-| skryversnaam   = Myles na gCopaleen, Flann O'Brien
-| geboren        = [[ 5 oktober]] [[1911]]
-| sturven        = [[1 april]] [[1966]]
-| genre          = [[Postmodernisme]], [[satire]], [[parody]]
-| spraoke        = [[engels]]k, [[iers|yrsk]], [[duuts|düütsk]], [[latien|latyn]]
-| laand          = [[Ierlaand|Yrland]]
-| webstee        = 
-|}}
+{{Infobox skryver
+| naam            = Brian O'Nolan
+| afbeylding      = 
+| ümskryving      = 
+| skuulnaam       = Myles na gCopaleen, Flann O'Brien
+| geboren         = [[5 oktober]] [[1911]]
+| störven         = [[1 april]] [[1966]]
+| land            = [[Ierlaand|Yrland]]
+| språke          = [[engels]]k, [[iers|yrsk]], [[duuts|düütsk]], [[latien|latyn]]
+| styl            = [[Postmodernisme]], [[satire]], [[parody]]
+| websteyde       = 
+}}
 
 '''Brian O'Nolan''' ([[Iers|yrsk]]: ''Brian Ó Nualláin''; [[5 oktober]] [[1911]] – [[1 april]] [[1966]]), ouk bekend under syne skuulnaams '''Flann O'Brien''' en '''Myles na gCopaleen''', was nen [[Ierlaand (laand)|yrsken]] skryver, toneelskryver en satirist. Hee wördt algemeyn eseen as een vöäranstånd figuur in [[postmodernisme|postmodernistiske]] [[literatuur]]. Syne [[engels|engelske]] böke, so as At Swim-Two-Birds en den Darden Policyman, skreyv hee under synen skryversnaam Flann O'Brien. Syne lange ryge satiriske [[column|nöälstükkes]] in de Irish Times en een [[keltisk]]talig book ''An Béal Bocht'' skreyv hee under de naam Myles na gCopaleen.
 
