Wiezigingen deur [[Special:Contributions/90.145.155.220|90.145.155.220]] hersteld tot de versie nao de leste wieziging deur [[User:Servien|Servien]]

--- a/West_Leegsaksisch_(algemain).mw
+++ b/West_Leegsaksisch_(algemain).mw
@@ -1,1 +1,18 @@
-EENHOORNS ZIJN NIET GAY!
+'''West Leegsaksisch''' is n group [[Nedersaksisch|Leegsaksische]] dialekten dij proat worden ien t westen van de [[Duutslaand|Duutse]] [[dailstoat]] [[Nedersaksen]] en ien t noordoosten van [[Nederlaand]]. t West Leegsaksisch is de tegenhonger van t Oost Leegsaksisch, ook wel [[Oost Leegduuts]] nuimd. Ien Duutslaand nuimt man t West Leegsaksisch ien dizze betaikenen ook wel "Niedersächsisch" en soamen mit t Oost Leegduuts vörmt t den t "Plattdeutsch". Ien Nederlaand nuimt man t West Leegsaksisch en t Oost Leegsaksisch soamen "Nedersaksisch", môr de noam "Nedersaksisch" wordt maisttied ook broekt allain veur t West Leegsaksisch.
+
+==Dialekten==
+De Leegsaksische dialekten dij bie t West Leegsaksisch rekend worden binnen:
+
+*[[Noord-Leegsaksisch]]
+**[[Grunnegs-Oostfrais]] (sums as apaarte groep zain)
+*[[Westfeels]]
+**[[Nederlaands Leegsaksisch]] (sums as apaarte groep zain)
+*[[Oostfeels]]
+
+==Zai ook==
+Veur meer informoatsie over t West Leegsaksisch (en t [[Oost Leegduuts|Oost Leegsaksisch]]) zai t artikel [[Nedersaksies]].
+
+{{Begin|gos}}
+
+[[Kategorie:Grunnegs artikel]]
+[[Kategorie:Nedersaksies]]
