*Empty MediaWiki Message*

--- a/Gerrit_Wolsink.mw
+++ b/Gerrit_Wolsink.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Wolsink Markelo 1979.jpg|thumb|Wolsink in Maarkel 1979]]
 '''Gerrit Wolsink''' ([[Hengel (Gelderland)|Hengel (Gld)]], [[1947]]) is nen vroggeren Nederlandsen [[motorcross]]er, den in de tweede helfte van de zeuventiger joaren metdeed an [[Grand Prix]]-races. T belangriekste wat e presteerd hef is t vief maol winnen van de GP van
-de Verenigde Staoten in [[Carlsbad]], van 1975 tot en met 1979, alleen in 1978 mos e de oaverwinning ovverlaoten an zienen groten teggenstander [[Heiki Mikkola]].
+de Verenigde Staoten in [[Carlsbad]], van 1975 tot en met 1979, alleen in 1978 mos e de oaverwinning ovverlaoten an zienen groten teggenstander [[Heikki Mikkola]].
 
 Hoowal e ne opleiding tot [[tandarts]] af-emaakt had, kaos Gerrit Wolsink derveur  um professioneel crosser te worden. In t begin deed e dit as privérieder op nen [[Maico]]. In [[1974]] wodden um ne plaatse an-eboaden in den [[Suzuki]]-fabrieksploog as ploogmoat van den Belg [[Roger De Coster]], den ok zienen grootsten teggenstander was.
 
