*Empty MediaWiki Message*

--- a/Wye.mw
+++ b/Wye.mw
@@ -1,4 +1,27 @@
-'''Wye''' ([[Nederlaands|hollandsk]]: ''Wijhe'') i een [[dorp]] an den [[Yssel]] in de hüdige [[gemeente|gemeynde]] [[Olst-Wye]] in de [[Nederlaand|neaderland]]ske provincy [[Oaveryssel]]. Wye ligget tüsken [[Deaventer]] en [[Zwolle]].
+{{Ploats in Nederlaand
+| naam = Wye
+| soorte = Dorp
+| bestansnaam vlagge = Wijhe_vlag.svg
+| bestansnaam wapen = Wijhe_wapen.svg
+| lokasie =
+| gemeente = [[Olst-Wye]]
+| previnsie = [[Ofbeelding:Flag Overijssel.svg|20px|Oaveriessel]] [[Oaveryssel]]
+| oppervlak =
+| oppervlak laand =
+| oppervlak water =
+| inwoners = 6439
+| doatum inwoners =
+| dichtheid =
+| breedtegroad = 52/23//N
+| lengtegroad = 6/8//E
+| verkeersoader = N337
+| netnummer = 0570
+| postcode = 8131
+| webstee = [http://www.olst-wijhe.nl www.olst-wijhe.nl]
+| region = NL-OV
+}}
+
+'''Wye''' ([[Nederlaands|hollandsk]]: ''Wijhe'') is een [[dorp]] an den [[Yssel]] in de hüdige [[gemeente|gemeynde]] [[Olst-Wye]] in de [[Nederlaand|neaderland]]ske provincy [[Oaveryssel]]. Wye ligget tüsken [[Deaventer]] en [[Zwolle]].
 
 Töt an den [[1 jannewaori|eyrsten januåry]] [[2001]] was Wye ne up sikselv stånde gemeynde. Vanof den dåtum wörden de gemeyndes Wye en [[Olst]] by mekander voogd under den naam Olst.<ref>[http://wetten.overheid.nl/BWBR0011454/geldigheidsdatum_07-01-2010 Wet Gemeentelijke Herindeling West-Overijssel] wetten.overheid.nl</ref> Den [[26 meert|26sten maert]] [[2002]] wör den naam veranderd når Olst-Wye.
 
