*Empty MediaWiki Message*

--- a/Wye.mw
+++ b/Wye.mw
@@ -32,7 +32,7 @@ Wye wördet vöär et eyrste in de böke nömed in [[960]] as "Wie", wat når al
 Wye ligget an den [[Yssel]], wår as nen oaversteak is med kampeersteydes. Med de Veluwe is Wye verbünden döär een kabelveyr, by et dörpken [[Vorchten]]. Dit nömet se et Wyeske Veyr. Oaver land ligget Wye an de [[N337]], tüsken de gröttere steyden Deaventer en Zwolle.
 
 == Openbår vervoor ==
-[[Station Wyhe]] ligget an de lyne Zwolle - Roosendaal, yder halv uur geyt der nen sneltrein beide kanten uut. Med de büsse is et dorp te bereiken med büslyne 161 (Deventer - Zwolle). Ouk geyt der ne ''buurtbüsse'' van Wye oaver [[Broeklaand (Raolte)|Brookland]] når [[Rålte]].
+[[Station Wyhe]] ligget an de lyne Zwolle - Roosendaal, yder halv uur geyt der nen sneltrein beide kanten uut. Med de büsse is et dorp te bereiken med büslyne 161 (Deventer - Zwolle). Ouk geyt der ne ''buurtbüsse'' van Wye oaver [[Broeklaand (Roalte)|Brookland]] når [[Rålte]].
 
 == Bezienswaardigheden ==
 * De [[Nikolaaskarke (Wye)|Nikolaaskarke]] is in laatgotisken styl upetrökken. De karke hevt drey [[Böyk (architektuur)|böyke]]. De öldste deylen stammet uut de 13e/14e eywe. Den torend is deyls laatromaansk en in gotisken styl uphöyged. In de karke ståt 17e-eywske möäbelen en gravtomben.
