*Empty MediaWiki Message*

--- a/Wye.mw
+++ b/Wye.mw
@@ -78,7 +78,7 @@ Hyr een paar vereanigingen uut Wye:
 
 * Med 'n karnaval heat Wye ''Ysseldonk''. Wye hevt twey karnavalsvereanigingen: C.V.De Diekschoevers en C.V. Wieje Bint Zat.
 * Wye hevt alle jåren ne feastweake: de Wyese Dykdaege. Dit is altyd in et eyrste weakeneande van september. Et is eyne van de [[Sallandske Soamerfeasten]].
-* In [[2012]] wör Wye döär [RTV Oost]] as "Leukste dorp van Overijssel" eköäsen.<ref>[https://web.archive.org/web/20121022161253/http://www.leukstedorpvanoverijssel.nl/ Het Leukste Dorp van Overijssel] leukstedorpvanoverijssel.nl</ref>
+* In [[2012]] wör Wye döär [[RTV Oost]] as "Leukste dorp van Overijssel" eköäsen.<ref>[https://web.archive.org/web/20121022161253/http://www.leukstedorpvanoverijssel.nl/ Het Leukste Dorp van Overijssel] leukstedorpvanoverijssel.nl</ref>
 
 
 == Fotogalerye ==
@@ -87,7 +87,6 @@ Kerk_Wijhe.jpg|Protestantske karke
 IJssel_Wijhe.jpg|Den Yssel by Wye
 2006-09-07 15.53 Wijhe, molen foto2.JPG|De Möäle
 </gallery>
- 
  
 [[Kategorie: Tweants artikel]]
 [[Categorie:Plaats in Overijssel]]
