*Empty MediaWiki Message*

--- a/Wye.mw
+++ b/Wye.mw
@@ -47,7 +47,7 @@ Et dorp hev vyv laegere skolen:
 * OBS Tellegenschool (oapenbår)
 * RK Sint Jozef School (katolik)
 * KBS De Bongerd (katolik)
-* Matzer School (protestantsk christelik)
+* Matzer School (protestantsk-christelik)
 
 '''Middelbåre skole:'''
 
