--- a/Ysland-baskisk.mw
+++ b/Ysland-baskisk.mw
@@ -12,3 +12,8 @@ Der sint mär een paar handskrivten vünden med nen ysland-baskisk oaversicht. K
 Baskiske walviskvårders warren de eyrsten dee as walvisken vöär de handel vüngen. Se seileden de heyle noord-atlantiske oceaan oaver en köämen selvs töt in [[Brazilië|Brasilie]]. Rund [[1600]] köämen se ouk in Ysland an.<ref>[http://www.galdrasyning.is/baskarnir.pdf Edvardsson & Rafnsson (2006). "Basque whaling around Iceland: archeological investigation in Strákatangi, Steingrímsfjörður.] (PDF)</ref> Nå ne skipbröäke in [[1615]] köämen de basken an land en kreygen verskel med de yslanders. Dår wördden se vermoordet in wat bekend steyt as de [[Spanjaardenslacht]]. Töt [[2015]] was der in Ysland selvs nen wet den as vöärskreav dat basken up de steyde doodhöwwen worden mussen as se sik in de Westfjorden seen löyten.<ref>[https://www.telegraph.co.uk/news/worldnews/europe/iceland/11635123/Iceland-abolishes-law-which-orders-Basques-to-be-killed-on-sight.html telegraph.co.uk. "Iceland abolishes law which orders Basques to be killed on sight." Alexander, Harriet.] Skreaven up [[28 mei]] [[2015]]. Bekeaken up [[3 april]] [[2019]].</ref? 
 
 Toch bleaven de basken når Ysland koamen, mär dat wör wal minder. Vanaf de tweyde hälvte van de 17. eyw wordet vaker franske en spaanske walviskvårders nöymed.
+
+[[Kategorie: Tweants artikel]]
+[[Kategorie: Taol]]
+
+[[en:Basque-Icelandic Pidgin]]
