*Empty MediaWiki Message*

--- a/Baskisk.mw
+++ b/Baskisk.mw
@@ -11,9 +11,9 @@
 |klassifikatie= Språkeiland
 }}
 
-'''Baskisk''' (selv segt de spreakers ''Euskara'', wat se uutsprekt as {{IPA|[eus̺ˈkaɾa]}}) is de språke van et [[Basken (volk)|baskenvolk]]. Et wörd köyerd in et [[Baskenland]], ne streake dey ligt in noordoust [[Spanje]] en süydwest [[Frankriek|Frankryk]]. Et wörd döär 25,7% van alle basken esprökken in alle deylen van de streake (665.800 van de 2.589.600).<ref>''IV. Inkesta Soziolinguistikoa'' Gobierno Vasco, Servicio Central de Publicaciones del Gobierno Vasco 2008, ISBN 978-84-457-2775-1</ref> 614.000 wount in Spanje, en de oaverige 51.800 wount in Frankryk.
+'''Baskisk''' (selv segt de spreakers ''Euskara'', wat se uutsprekt as {{IPA|[eus̺ˈkaɾa]}}) is de språke van et [[Basken (volk)|baskenvolk]]. Et wördt küerd in et [[Baskenland]], ne streake dee ligt in noordoust [[Spanje]] en süydwest [[Frankriek|Frankryk]]. Et wördt döär 25,7% van alle basken esprökken in alle deylen van de streake (665.800 van de 2.589.600).<ref>''IV. Inkesta Soziolinguistikoa'' Gobierno Vasco, Servicio Central de Publicaciones del Gobierno Vasco 2008, ISBN 978-84-457-2775-1</ref> 614.000 wount in Spanje, en de oaverige 51.800 wount in Frankryk.
 
-In weatenskappelike verhandelingen oaver de verdeylinge van baskisk in Spanje en Frankryk wörd normaalgesprökken [[Noord-Baskenlaand|dree olde provinsys]] in Frankryk en veyr in Spanje reakend. [[Modersproake|Modersprekkers]] wount in een döärloupend gebeyd, bestånde uut deylen van de spaanske ''Selvstürende Gemeenskappen'' van et Baskenland en [[Navarre]] en in et westelike deel van et franske département van de [[Pyrénées-Atlantiques|Atlantiske Pyreneyen]]. De baskiske Selvstürende Gemeynskap is ne administratyve eynheyd binnen et tweylandelike etnografiske baskenland, med dår by in de spaanske provinsys [[Biskaye]], [[Gipuzkoa]] en [[Álava]], dey beståt as afsünderlike polityk-administratyve streaken.
+In weatenskappelike verhandelingen oaver de verdeylinge van baskisk in Spanje en Frankryk wörd normaalgesprökken [[Noord-Baskenlaand|dree olde provincys]] in Frankryk en veer in Spanje reakend. [[Modersproake|Modersprekkers]] wounet in een döärloupend gebeyd, bestånde uut deylen van de spaanske ''Selvstürende Gemeenskappen'' van et Baskenland en [[Navarre]] en in et westelike deel van et franske département van de [[Pyrénées-Atlantiques|Atlantiske Pyreneyen]]. De baskiske Selvstürende Gemeynskap is ne administratyve eynheyd binnen et tweylandelike etnografiske baskenland, med dår by in de spaanske provinsys [[Biskaye]], [[Gipuzkoa]] en [[Álava]], dey beståt as afsünderlike polityk-administratyve streaken.
 
 In disse provinsys en völle deylen van Navarre wount völle etniske basken kort by mekaar. Toch was et Euskara töt seyker an de 90'er jåren van et [[20e eeuw|20ste jårhunderd]] sowat totaal vort uut et grötste deyl van [[Álava]], westerlike deylen van Biskaye en et middelste en südelike deyl van Navarre. In süüdwest Frankryk warren [[Labourd]], [[Leeg Navarre]], en [[Soule]] de olde baskenprovinsys. Se wörden med een paar streaken meer te houpe maakt töt eyn ''département'' in [[1790]] med den naam ''Basses-Pyrénées''. Dissen naam wör nog töt 1970 gebruukt.
 
