*Empty MediaWiki Message*

--- a/Ysland-baskisk.mw
+++ b/Ysland-baskisk.mw
@@ -13,5 +13,20 @@ Baskiske walviskvårders warren de eyrsten dee as walvisken vöär de handel vü
 
 Toch bleaven de basken når Ysland koamen, mär dat wör wal minder. Vanaf de tweyde hälvte van de 17. eyw wordet vaker franske en spaanske walviskvårders nöymed.
 
+==Geskydenisse van de wöördelysten==
+Der sint mär nen handvul wöördelyste vünden. Twey dårvan satten by de handskrivten van den 18.-eywsken geleyrden [[Jón Ólafsson van Grunnavík]], med de titel:
+* ''[[#vocabula gallica|Vocabula Gallica]]'' ("Franske wöörde"). Eskreaven in de lätste hälvte van de 17. eyw, med 517 wöörde en 46 getallen spreided oaver 16 bladsyden. Hyrtüsken ståt ouk verskeidene wöörde en sinnen van de mengspråke.
+
+* ''[[#vocabula biscaica|Vocabula Biscaica]]'' ("[[Biskaai]]ske (baskiske) wöörde"). Ne oaverskryving döär Jón Ólafsson. et oorsprunkelike dokument is verlöaren. Et hevt 229 wöörde en korte sinnen, en 49 telwöörde. Ouk hyr ståt verskeidene wöörde uut de ysland-baskiske mengspråke tüsken.
+
+De handskrivten wörden rund 1925 wear evünden döär den yslandsken [[filology|filologist]] [[Jón helgason (dichter)|Jón Helgason]] in de [[Arnamagnæ-versameling]] an de [[Universiteit van Koupenhaven]]. Hee skreav de lysten oaver, satten de yslandske wöörde ümme in et düütsk en stüreden de kopyen når professor [[Christianus Cornelius Uhlenbeck]] van de [[Universiteit van Leiden]] in [[Neaderland]]. Uhlenbeck was bekend med baskisk, mär ümdat hee in 1926 med pensioon gung, spölleden hee de lysten döär an synen doktoraalstudent Nicolaas Gerard Hendrik Deen. Deen nöäm kontakt up med den baskisken professor [[Julio Urquijo Ibarra]]. In [[1937]] gavven Deen syn [[doktoraalskrivt]] uut oaver de Ysland-Baskiske wöördelysten. Et wör de ''Glossaria duo vasco-islandica'' nöömd en skreaven in [[latyn]]. De meyste sinnen wörden ouk in et düütsk en spaansk ümmesat.
+
+In 1986 wörden Ólafsson syne handskrivten vanuut [[Deanemarken]] wear terügge bracht når Ysland.<ref>[https://web.archive.org/web/20120501170612/http://www.euskosare.org/euskara/basque_fishermen_iceland_bilingual_vocabularies_17_18_centuries Knörr, Henrike. Basque fishermen Iceland bilingual vocabularies 17 18 Centuries. (2007). Bekeaken up 4 april 2019.</ref>
+
+Der wörd ouk verweysen når ne darde wöördelyste. In nen breev nöömt den yslandsken språkenkündigen [[Sveinbjörn Egilsson]] een handskrivt med twey bladsyden med "vrömde wöörde en lysten" en nöm der elv vöärbeylden van oaver. De wöördelyste selv is kwyt, mär den breev is bewård in de Nationale Bibliotheek van Ysland. Toch is der gin mengspråke tüsken syne vöärbeylde.
+
+=== De veerde wöördelyste ===
+In de bibliotheek van de [[Universiteit van Harvard]] wör noch ne veerde ysland-baskiske wöördelyste vünden. Den was versameld döär den düütsken geskydkündigen [[Konrad von Maurer]] doo as hee in [[1858]] up besöök was in Ysland. Et manuskript stamt uut et eande van de 18. eywe of de vroge 19. eywe. De lyste wör pas in [[2008]] vünden. Den oorsprunkeliken besitter har nit enöömd dat der baskisk in vöär köäm.<ref>[https://web.archive.org/web/20120505121657/http://www.euskosare.org/komunitateak/ikertzaileak/ehmg/7/viola_miglio_and_ricardo_etxepare_-_a Belluzzo, Nicholas (2007). ''Viola Miglio and Ricardo Etxepare. - "A new Basque - Icelandic glossary of the 17th Century.'']</ref> Up mär twey van de bladsyden ståt ysland-baskiske wöörde. De rest is unverwante saken as uutleg oaver [[goocheltrucs]] en et uutspreaken van leevdesbesweyringen. Et is düdelik dat den oaverskryver gin idey har dat et baskisk was, ümdat de titel is "een paar latynske wöörde." Vöäle van de upsummingen sint verkeyrd en et lykt et wark van ymand den as nit gewoon is te skryven. Een grout deyl van de wöörde koamet nit vöär in Deen syne lyste, vandår at emeynd wördt dat et ne kopy is van een unbekend ysland-baskisk oaversicht. Der ståt in totaal ungeveyr 68 wöörde en sinnen in.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Taol]]
